--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "",
+  "author": "Anonymous Pizzas",
   "dependencies": {
     "@material/tabs": "^0.3.1",
     "axios": "^0.16.2",
@@ -51,7 +51,7 @@
     "production": "grunt deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "version": "1.0.0",
+  "version": "2.0.0",
   "devDependencies": {
     "css-loader": "^0.28.7",
     "node-sass": "^4.5.3",
